--- a/isa/Makefile
+++ b/isa/Makefile
@@ -5,6 +5,9 @@
 XLEN ?= 64
 
 src_dir := .
+build_dir := build
+
+$(shell mkdir -p build)
 
 ifeq ($(XLEN),64)
 include $(src_dir)/rv64ui/Makefrag
@@ -31,10 +34,11 @@ default: all
 # Build rules
 #--------------------------------------------------------------------
 
-RISCV_PREFIX ?= riscv$(XLEN)-unknown-elf-
+RISCV_PREFIX ?= riscv$(XLEN)-linux-gnu-
 RISCV_GCC ?= $(RISCV_PREFIX)gcc
 RISCV_GCC_OPTS ?= -static -mcmodel=medany -fvisibility=hidden -nostdlib -nostartfiles
-RISCV_OBJDUMP ?= $(RISCV_PREFIX)objdump --disassemble-all --disassemble-zeroes --section=.text --section=.text.startup --section=.text.init --section=.data
+RISCV_OBJDUMP ?= $(RISCV_PREFIX)objdump --disassemble-all --disassemble-zeroes
+RISCV_OBJCOPY ?= $(RISCV_PREFIX)objcopy
 RISCV_SIM ?= spike
 
 vpath %.S $(src_dir)
@@ -43,7 +47,10 @@ vpath %.S $(src_dir)
 # Build assembly tests
 
 %.dump: %
-	$(RISCV_OBJDUMP) $< > $@
+	$(RISCV_OBJDUMP) $(build_dir)/$< > $(build_dir)/$@
+
+%.bin: %
+	$(RISCV_OBJCOPY) -O binary $(build_dir)/$< $(build_dir)/$@
 
 %.out: %
 	$(RISCV_SIM) --isa=rv64gc $< 2> $@
@@ -54,16 +61,17 @@ vpath %.S $(src_dir)
 define compile_template
 
 $$($(1)_p_tests): $(1)-p-%: $(1)/%.S
-	$$(RISCV_GCC) $(2) $$(RISCV_GCC_OPTS) -I$(src_dir)/../env/p -I$(src_dir)/macros/scalar -T$(src_dir)/../env/p/link.ld $$< -o $$@
+	$$(RISCV_GCC) $(2) $$(RISCV_GCC_OPTS) -I$(src_dir)/../env/xs -I$(src_dir)/macros/scalar -T$(src_dir)/../env/xs/link.ld $$< -o $$(build_dir)/$$@
 $(1)_tests += $$($(1)_p_tests)
 
-$$($(1)_v_tests): $(1)-v-%: $(1)/%.S
-	$$(RISCV_GCC) $(2) $$(RISCV_GCC_OPTS) -DENTROPY=0x$$(shell echo \$$@ | md5sum | cut -c 1-7) -std=gnu99 -O2 -I$(src_dir)/../env/v -I$(src_dir)/macros/scalar -T$(src_dir)/../env/v/link.ld $(src_dir)/../env/v/entry.S $(src_dir)/../env/v/*.c $$< -o $$@
-$(1)_tests += $$($(1)_v_tests)
+# $$($(1)_v_tests): $(1)-v-%: $(1)/%.S
+# 	$$(RISCV_GCC) $(2) $$(RISCV_GCC_OPTS) -DENTROPY=0x$$(shell echo \$$@ | md5sum | cut -c 1-7) -std=gnu99 -O2 -I$(src_dir)/../env/v -I$(src_dir)/macros/scalar -T$(src_dir)/../env/v/link.ld $(src_dir)/../env/v/entry.S $(src_dir)/../env/v/*.c $$< -o $$@
+# $(1)_tests += $$($(1)_v_tests)
 
 $(1)_tests_dump = $$(addsuffix .dump, $$($(1)_tests))
+$(1)_tests_bin = $$(addsuffix .bin, $$($(1)_tests))
 
-$(1): $$($(1)_tests_dump)
+$(1): $$($(1)_tests_dump) $$($(1)_tests_bin)
 
 .PHONY: $(1)
 
@@ -91,18 +99,19 @@ $(eval $(call compile_template,rv64mi,-march=rv64g -mabi=lp64))
 endif
 
 tests_dump = $(addsuffix .dump, $(tests))
+tests_bin = $(addsuffix .bin, $(tests))
 tests_hex = $(addsuffix .hex, $(tests))
 tests_out = $(addsuffix .out, $(spike_tests))
 tests32_out = $(addsuffix .out32, $(spike32_tests))
 
 run: $(tests_out) $(tests32_out)
 
-junk += $(tests) $(tests_dump) $(tests_hex) $(tests_out) $(tests32_out)
+junk = $(build_dir)
 
 #------------------------------------------------------------
 # Default
 
-all: $(tests_dump)
+all: $(tests_dump) $(tests_bin)
 
 #------------------------------------------------------------
 # Clean up
